# test_opengl

./: .gitmodules
include/: glad.c  (+1 more)
src/: :w  ;:w  CMakeCache.txt  CMakeLists.txt  IndexBuffer.cpp  Makefile  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  basic.shader  cmake_install.cmake  compile_commands.json  imgui.ini  imgui_log.txt  main.cpp  map.cpp  map.h  map.txt  opengl  program  shader.cpp  shader.h
src/.cache/clangd/index/: IndexBuffer.cpp.5B86BF704E4FD441.idx  IndexBuffer.h.FE6AF51B6CA7BDB2.idx  Texture.cpp.1ABADE59228EDB7B.idx  Texture.h.DB24925DC2CA2F58.idx  VertexArray.cpp.1EDEE7FBA7278571.idx  VertexArray.h.F470479905FDC746.idx  VertexBuffer.cpp.5CE6B44D857591EB.idx  VertexBuffer.h.93B36D7CF4615431.idx  VertexBufferLayout.cpp.DBD1105913B6A0C9.idx  VertexBufferLayout.h.35CC131CE0549DAE.idx  _fixes.hpp.C65949D818AFE8E2.idx  _fixes.hpp.CE377C14A9107C4D.idx  _vectorize.hpp.2BA734D5D4E92E25.idx  _vectorize.hpp.C2B9187BF56B1C09.idx  camera.cpp.7472BBB8E1749AA9.idx  common.hpp.0691C78BFFF85DE6.idx  common.hpp.34900AF606BF7549.idx  compute_common.hpp.3FEC918CF58BB011.idx  compute_common.hpp.76B36D242961E95A.idx  compute_vector_decl.hpp.21C3936D93DC7501.idx  compute_vector_decl.hpp.DC8010CE93C2E0F6.idx  compute_vector_relational.hpp.196D96A5287D39B7.idx  (+383 more)
src/include/: IndexBuffer.cpp  IndexBuffer.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  map.h  material.h  shader.cpp  shader.h
src/resources/: imgui.ini
src/resources/shaders/: basic.shader  light.shader
(+24 files in other folders)
